# N-Body_Barnes_Hut

./: .gitignore  .gitmodules  CMakeLists.txt  benchmark-nbody-dynallocs.sh
cmake/: PlatformDetection.cmake  config.h.in
src/: PersistentVector.hpp  bench_main.cpp  bitmap.cpp  bitmap.h  config.h  core.c  core.cpp  core.h  main.c  main.cpp  render.c  render.cpp  render.h
src/c/: core.c  core.h  main.c
